applied patch for STANBOL-1313 in trunk
git-svn-id: https://svn.apache.org/repos/asf/stanbol/trunk@1587798 13f79535-47bb-0310-9956-ffa450edef68